[package]
name = "mduck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"
log = "0.4.19"
pretty_env_logger = "0.5.0"
pulldown-cmark = {version = "0.9.3", features = ["simd"]}
html_editor = "0.6.1"
color-eyre = "0.6.2"
toml_edit = "0.19.14"